<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danutneagu.magicsaloons.Blog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/Logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.615"
            app:srcCompat="@drawable/bigbanner"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/blog_header"
            app:fontspannabletextview_partialText="MAGIC POINTS"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="0.14"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/blog_container"
            app:fontspannabletextview_partialText="Calendarul Ofertelor Magice"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/paragraph1"
            app:fontspannabletextview_partialText="Magic Smart Grup SRL"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/paragraph2"
            app:fontspannabletextview_partialText="achizitioneaza servicii"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/paragraph3"
            app:fontspannabletextview_partialText="valabil"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/paragraph4"
            app:fontspannabletextview_partialText="cardul virtual magic"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/paragraph4continued"
            app:fontspannabletextview_partialText="cardul virtual magic 4%"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/paragraph4continued2"
            app:fontspannabletextview_partialText="cardul virtual magic 5%"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/paragraph4continued3"
            app:fontspannabletextview_partialText="cardul virtual magic 6%"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/paragraph5"
            app:fontspannabletextview_partialText="Magic Points"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/paragraph6"
            app:fontspannabletextview_partialText="*3000"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/paragraph7"
            app:fontspannabletextview_partialText="Cardul virtual"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/paragraph8"
            app:fontspannabletextview_partialText="rezerva dreptul"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="16sp"/>

        <com.example.danutneagu.magicsaloons.FontSpannableTextView
            android:id="@+id/textViewBlog14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/finalparagraph"
            app:fontspannabletextview_partialText="Nistor Denisa"
            app:fontspannabletextview_partialTextColor="@color/primary_darker"
            android:textColor="@color/iron"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </LinearLayout>
</ScrollView>